--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Dark Theme for Jira",
     "description": "Allow user to switch between light and dark theme on the Jira website",
     "version": "1.0",
@@ -8,16 +8,14 @@
         "48": "./images/dark48.png",
         "128": "./images/dark128.png"
     },
-    "page_action": {
-        "default_action": {
-            "16": "./images/dark16.png",
-            "48": "./images/dark48.png",
-            "128": "./images/dark128.png"
-        }
-    },
     "content_scripts": [
         {
-            "matches": ["https://*/jira/*"],
+            "matches": 
+                [
+                    "https://*.atlassian.net/jira/*",
+                    "https://*.atlassian.net/issues/*",
+                    "https://*.atlassian.net/browse/*"
+                ],
             "js": ["index.js"]
         }
     ],
